--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
 /* .country:hover {
     stroke: #fff;
     stroke-width: 1.5px;
@@ -14,7 +20,7 @@
     /* border-radius: 5px; */
     height: 100%;
     overflow: hidden;
-    background: #F0F8FF;
+    background: #fff;
   }
 
   .hidden {
